// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-blHHSb jWUilC"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-iRVXky eOIFFu"
    >
      <img
        class="sc-ljhlHD hUbIth"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-jQybuE jmDjTD"
    >
      <a
        class="sc-erSfwj inMCXb"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-erSfwj inMCXb"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-erSfwj inMCXb"
        href="/leaderboard"
      >
        Leaderboard
      </a>
      <a
        class="sc-erSfwj inMCXb"
        href="/referrals"
      >
        referrals
      </a>
      <button
        class="sc-fAUdSK dztAJe"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-dntaoT hkozYz"
      >
        <button
          class="sc-fAUdSK lchHyL"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-jQybuE jmDjTD"
>
  <a
    class="sc-erSfwj inMCXb"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-erSfwj inMCXb"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-erSfwj inMCXb"
    href="/leaderboard"
  >
    Leaderboard
  </a>
  <a
    class="sc-erSfwj inMCXb"
    href="/referrals"
  >
    referrals
  </a>
  <button
    class="sc-fAUdSK dztAJe"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-dntaoT hkozYz"
  >
    <button
      class="sc-fAUdSK lchHyL"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
